<resources>
    <string name="app_name">parse_instagram</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="submit">Submit</string>
    <string name="new_post">New Post</string>
    <string name="take_picture">Take Picture</string>
    <string name="todo">TODO</string>
    <string name="new_user_create_an_account">New User? Create an Account</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="choose_a_secure_password">Choose a secure password</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log out</string>
</resources>
